# ncnn_ssd

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: jni_convertArrayToMat.h  jni_utils.h
java/com/thinkjoy/androidssd/: CameraPreview.java  FaceOverlayView.java  GestureDetectResult.java  GlobalInfo.java  MainActivity.java  NativeInterface.java  Object.java  PhotoUtils.java  StartActivity.java
src/: jni_convertArrayToMat.cpp  jni_utils.cpp  main.cpp
